--- a/webapp/etc/quartz/quartz.properties
+++ b/webapp/etc/quartz/quartz.properties
@@ -1,63 +1,18 @@
-################################################################################
-# Copyright 2015 Tawi Commercial Services Ltd
-#
-# Licensed under the Open Software License, Version 3.0 (the “License”); you may
-# not use this file except in compliance with the License. You may obtain a copy
-# of the License at:
-# http://opensource.org/licenses/OSL-3.0
-#
-# Unless required by applicable law or agreed to in writing, software 
-# distributed under the License is distributed on an “AS IS” BASIS, WITHOUT 
-# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-#
-# See the License for the specific language governing permissions and 
-# limitations under the License.
-################################################################################
-
-org.quartz.shcheduler.instanceName = QuartzScheduler
+####### Main Quartz configuration
 org.quartz.scheduler.skipUpdateCheck = true
+org.quartz.scheduler.instanceName = MyQuartzScheduler
+org.quartz.scheduler.jobFactory.class = org.quartz.simpl.SimpleJobFactory
+org.quartz.scheduler.instanceId = 1
+org.quartz.scheduler.rmi.export = false
+org.quartz.scheduler.rmi.proxy = false
 
-
-#==============================================================
-# Configuration for ThreadPool settings
-# Configure ThreadPool
-#==============================================================
-org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
+####### Configuring JobStore
+org.quartz.jobStore.class = org.quartz.simpl.RAMJobStore
 org.quartz.threadPool.threadCount = 3
-org.quartz.threadPool.threadPriority = 5
+org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
 
-
-#==============================================================
-# Configuring Quartz to use JobStoreTx
-#==============================================================
-org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
-
-
-#==============================================================
-# Configuring JDBCJobStore to use a DriverDelegate
-#==============================================================
-org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
-
-
-#==============================================================
-# Configuring JDBCJobStore with the Table Prefix
-#==============================================================
-org.quartz.jobStore.tablePrefix = QRTZ_
-
-
-#==============================================================
-# Configuring JDBCJobStore with the name of the DataSource to
-# use
-#==============================================================
-org.quartz.jobStore.dataSource = babblesms
-
-
-#==============================================================
-# Configuring JDBCJobStore with  DataSource to
-# use
-#==============================================================
-org.quartz.dataSource.babblesms.driver = org.postgresql.Driver
-org.quartz.dataSource.babblesms.URL = jdbc:postgresql://localhost:5432/babblesmsdb
-org.quartz.dataSource.babblesms.user = babblesms
-org.quartz.dataSource.babblesms.password = CrutNoc1
-org.quartz.dataSource.babblesms.maxConnections = 5
+######## Configure it to look in the quartz.xml for the job schedules
+org.quartz.plugin.jobInitializer.class = org.quartz.plugins.xml.XMLSchedulingDataProcessorPlugin
+org.quartz.plugin.jobInitializer.fileNames = quartz-config.xml
+org.quartz.plugin.jobInitializer.failOnFileNotFound = true
+org.quartz.plugin.jobInitializer.scanInterval = 120
