--- a/webapp/build.properties
+++ b/webapp/build.properties
@@ -21,11 +21,11 @@ app.name=BabbleSMS
 # environment
 environment=env
 
-# Subversion Home
-SVN_HOME=${env.HOME}/svn
+# Git Home
+GIT_HOME=${env.HOME}/git
 
 # Project Home
-BABBLESMS_HOME=${SVN_HOME}/${app.name}/trunk/webapp
+BABBLESMS_HOME=${GIT_HOME}/${app.name}/webapp
 
 # These are related to JBoss WildFly Application Server
 # Ensure that you have set the environment variable $JBOSS_HOME correctly.
