Change build structure from svn to git.

--- a/webapp/build.properties
+++ b/webapp/build.properties
@@ -21,16 +21,16 @@ app.name=BabbleSMS
 # environment
 environment=env
 
-# Subversion Home
-SVN_HOME=${env.HOME}/svn
+# Git Home
+GIT_HOME=${env.HOME}/git
 
 # Project Home
-BABBLESMS_HOME=${SVN_HOME}/${app.name}/trunk/webapp
+BABBLESMS_HOME=${GIT_HOME}/${app.name}/webapp
 
 # These are related to JBoss WildFly Application Server
 # Ensure that you have set the environment variable $JBOSS_HOME correctly.
 # For example, by adding the following line to your .bashrc:
-# export JBOSS_HOME=/opt/Programs/WildFly/9.0.0
+# export JBOSS_HOME=/opt/Programs/WildFly/10
 DEPLOY_FOLDER=${env.JBOSS_HOME}/standalone/deployments
 
 config.file=${BABBLESMS_HOME}/etc/config.properties
