--- a/webapp/build.properties
+++ b/webapp/build.properties
@@ -94,7 +94,7 @@ compile-jars = \
   junit/4.8.2/junit-dep-4.8.2.jar \
   log4j/1.2.17/log4j-1.2.17.jar \
   oracle/javaee/JEE/JEE7/javaee-api-7.0.jar \
-  postgresql/9.3/postgresql-9.3-1102.jdbc41.jar \
+  postgresql/9.4/postgresql-9.4.1208.jar \
   quartz/2.2.1/quartz-2.2.1.jar \
   quartz/2.2.1/quartz-jobs-2.2.1.jar \
   slf4j/1.7.12/slf4j-api-1.7.12.jar \
@@ -133,7 +133,7 @@ deploy-jars = \
   joda-time/2.8.1/joda-time-2.8.1.jar \
   log4j/1.2.17/log4j-1.2.17.jar \
   oracle/javamail/1.5.3/javax.mail.jar \
-  postgresql/9.3/postgresql-9.3-1102.jdbc41.jar \
+  postgresql/9.4/postgresql-9.4.1208.jar \
   quartz/2.2.1/quartz-2.2.1.jar \
   quartz/2.2.1/quartz-jobs-2.2.1.jar \
   quartz/2.2.1/dependencies/c3p0-0.9.1.1.jar \
