Debugging of display for Contacts.

--- a/webapp/etc/log4j/log4j.properties
+++ b/webapp/etc/log4j/log4j.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Copyright 2015 Tawi Commercial Services Ltd
+# Copyright 2016 Tawi Commercial Services Ltd
 #
 # Licensed under the Open Software License, Version 3.0 (the “License”); you may
 # not use this file except in compliance with the License. You may obtain a copy
@@ -53,7 +53,7 @@ log4j.appender.A1.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss} | %p | %C | 
 
 # Appender A2 writes to the file "log4j".
 log4j.appender.A2=org.apache.log4j.FileAppender
-log4j.appender.A2.File=/opt/Programs/WildFly/9.0.0/standalone/log/log4jBabble.log
+log4j.appender.A2.File=/opt/Programs/WildFly/10/standalone/log/log4jBabble.log
 
 
 # Truncate 'log4j' if it aleady exists.
@@ -62,5 +62,3 @@ log4j.appender.A2.Append=true
 # Appender A2 uses the PatternLayout.
 log4j.appender.A2.layout=org.apache.log4j.PatternLayout
 log4j.appender.A2.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss} | %p | %C | (%13F:%L) | %m%n
-
-
