--- a/pom.xml
+++ b/pom.xml
@@ -7,17 +7,17 @@
     of the License at:
     http://opensource.org/licenses/OSL-3.0
 
-    Unless required by applicable law or agreed to in writing, software 
-    distributed under the License is distributed on an “AS IS” BASIS, WITHOUT 
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an “AS IS” BASIS, WITHOUT
     WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 
-    See the License for the specific language governing permissions and 
+    See the License for the specific language governing permissions and
     limitations under the License.
 -->
-   
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>ke.co.tawi.babblesms</groupId>
   <artifactId>BabbleSMS</artifactId>
@@ -26,19 +26,19 @@
   <name>BabbleSMS Maven Webapp</name>
   <url>http://babblesms.tawi.mobi</url>
   <inceptionYear>2015</inceptionYear>
-  
+
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-  
+
   <dependencies>
       <dependency>
     	<groupId>commons-collections</groupId>
     	<artifactId>commons-collections</artifactId>
     	<version>3.2.2</version>
     </dependency>
-    
+
     <dependency>
         <groupId>commons-configuration</groupId>
         <artifactId>commons-configuration</artifactId>
@@ -50,13 +50,13 @@
     	<artifactId>commons-dbutils</artifactId>
     	<version>1.6</version>
     </dependency>
-    
+
     <dependency>
     	<groupId>org.apache.commons</groupId>
     	<artifactId>commons-email</artifactId>
     	<version>1.4</version>
     </dependency>
-    
+
     <dependency>
         <groupId>commons-fileupload</groupId>
         <artifactId>commons-fileupload</artifactId>
@@ -68,13 +68,13 @@
         <artifactId>commons-io</artifactId>
         <version>2.5</version>
     </dependency>
-    
+
       <dependency>
     	<groupId>org.apache.commons</groupId>
     	<artifactId>commons-lang3</artifactId>
     	<version>3.5</version>
     </dependency>
-    
+
     <dependency>
     	<groupId>org.apache.commons</groupId>
     	<artifactId>commons-math3</artifactId>
@@ -88,17 +88,11 @@
     </dependency>
 
     <dependency>
-    	<groupId>org.apache.poi</groupId>
-    	<artifactId>poi</artifactId>
-    	<version>3.15</version>
-    </dependency>
-    
-    <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
         <version>4.5.2</version>
     </dependency>
-    
+
     <dependency>
         <groupId>org.apache.poi</groupId>
         <artifactId>poi</artifactId>
@@ -116,13 +110,13 @@
     	<artifactId>ehcache</artifactId>
     	<version>2.10.3</version>
     </dependency>
-    
+
     <dependency>
     	<groupId>com.zaxxer</groupId>
     	<artifactId>HikariCP</artifactId>
     	<version>2.6.0</version>
     </dependency>
-    
+
     <dependency>
         <groupId>com.itextpdf</groupId>
         <artifactId>itextpdf</artifactId>
@@ -134,11 +128,11 @@
     	<artifactId>gson</artifactId>
     	<version>2.8.0</version>
     </dependency>
-    
+
     <dependency>
         <groupId>org.jasypt</groupId>
         <artifactId>jasypt</artifactId>
-        <version>1.9.2</version>    
+        <version>1.9.2</version>
     </dependency>
 
     <dependency>
@@ -146,25 +140,26 @@
     	<artifactId>joda-time</artifactId>
     	<version>2.9.7</version>
     </dependency>
-    
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>      
-    </dependency>	
-    
+      <version>4.12</version>
+    </dependency>
+
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
-    
+
     <dependency>
     	<groupId>javax.servlet</groupId>
     	<artifactId>javax.servlet-api</artifactId>
     	<version>3.1.0</version>
+        <scope>provided</scope>
     </dependency>
-    
+
     <dependency>
         <groupId>javax.json</groupId>
         <artifactId>javax.json-api</artifactId>
@@ -176,15 +171,15 @@
     	<artifactId>quartz</artifactId>
     	<version>2.2.3</version>
     </dependency>
-    
+
     <dependency>
     	<groupId>org.postgresql</groupId>
     	<artifactId>postgresql</artifactId>
     	<version>9.4.1212</version>
     </dependency>
-    
+
   </dependencies>
-  
+
   <developers>
         <developer>
             <name>Michael Wakahe</name>
@@ -196,15 +191,15 @@
             </roles>
         </developer>
     </developers>
-        
+
   <contributors>
         <contributor>
             <name>Eugene Wang'ombe</name>
         </contributor>
    </contributors>
-   
+
   <build>
     <finalName>BabbleSMS</finalName>
   </build>
-  
+
 </project>
