--- a/pom.xml
+++ b/pom.xml
@@ -198,8 +198,26 @@
         </contributor>
    </contributors>
 
+
   <build>
     <finalName>BabbleSMS</finalName>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>2.2</version>
+          <configuration>
+            <url>http://localhost:8080/manager/text</url>
+            <server>TomcatServer</server>
+            <username>admin</username>
+            <password>password</password>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
   </build>
 
 </project>
