--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,11 @@
     	<version>9.4.1212</version>
     </dependency>
 
+    <dependency>
+    	<groupId>org.hibernate</groupId>
+    	<artifactId>hibernate-core</artifactId>
+    	<version>5.2.8.Final</version>
+    </dependency>
   </dependencies>
 
   <developers>
