--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,11 @@
     	<artifactId>hibernate-core</artifactId>
     	<version>5.2.8.Final</version>
     </dependency>
+    <dependency>
+    	<groupId>org.hibernate</groupId>
+    	<artifactId>hibernate-validator</artifactId>
+    	<version>5.4.0.Final</version>
+    </dependency>
   </dependencies>
 
   <developers>
