--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,20 +1,20 @@
 ################################################################################
 # Copyright 2016 Tawi Commercial Services Ltd
 #
-# Licensed under the Open Software License, Version 3.0 (the “License”); you may
+# Licensed under the Open Software License, Version 3.0 (the "License"); you may
 # not use this file except in compliance with the License. You may obtain a copy
 # of the License at:
 # http://opensource.org/licenses/OSL-3.0
 #
-# Unless required by applicable law or agreed to in writing, software 
-# distributed under the License is distributed on an “AS IS” BASIS, WITHOUT 
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 # WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #
-# See the License for the specific language governing permissions and 
+# See the License for the specific language governing permissions and
 # limitations under the License.
 ################################################################################
 
-# A log4j configuration file that outputs both to System.out and a file named 
+# A log4j configuration file that outputs both to System.out and a file named
 #'log4jBabble.log'.
 
 # For the general syntax of property based configuration files see the
@@ -23,7 +23,7 @@
 # WARNING: Location information can be useful but is very costly in
 # terms of computation.
 
-# The root logger uses the appender called A1. 
+# The root logger uses the appender called A1.
 
 # The root logger uses the appenders called A1 and A2. Since no level
 # is specified, note the empty string between the comma (",") and the
