--- a/pom.xml
+++ b/pom.xml
@@ -177,12 +177,12 @@
     	<version>2.2.3</version>
     </dependency>
 
+	<!-- Database dependencies -->
     <dependency>
-    	<groupId>org.postgresql</groupId>
-    	<artifactId>postgresql</artifactId>
-    	<version>9.4.1212</version>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.41</version>
     </dependency>
-
     <dependency>
     	<groupId>org.hibernate</groupId>
     	<artifactId>hibernate-core</artifactId>
@@ -193,6 +193,31 @@
     	<artifactId>hibernate-validator</artifactId>
     	<version>5.4.0.Final</version>
     </dependency>
+    <dependency>
+    	<groupId>com.zaxxer</groupId>
+    	<artifactId>HikariCP</artifactId>
+    	<version>2.6.1</version>
+    </dependency>
+    
+    <!-- Concerning Ehcache, as 2nd Level cache for Hibernate -->
+    <dependency>
+        <groupId>org.ehcache</groupId>
+        <artifactId>ehcache</artifactId>
+        <version>3.3.1</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-ehcache</artifactId>
+        <version>5.2.9.Final</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.25</version>
+    </dependency>
+    
   </dependencies>
 
   <developers>
