--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 
   <dependencies>
@@ -106,18 +108,6 @@
     </dependency>
 
     <dependency>
-    	<groupId>net.sf.ehcache</groupId>
-    	<artifactId>ehcache</artifactId>
-    	<version>2.10.3</version>
-    </dependency>
-
-    <dependency>
-    	<groupId>com.zaxxer</groupId>
-    	<artifactId>HikariCP</artifactId>
-    	<version>2.6.0</version>
-    </dependency>
-
-    <dependency>
         <groupId>com.itextpdf</groupId>
         <artifactId>itextpdf</artifactId>
         <version>5.5.10</version>
@@ -145,18 +135,19 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
-	    <groupId>org.apache.logging.log4j</groupId>
-	    <artifactId>log4j-core</artifactId>
-	    <version>2.8.2</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.apache.logging.log4j</groupId>
-	    <artifactId>log4j-api</artifactId>
-	    <version>2.8.2</version>
-	</dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.8.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.8.2</version>
+    </dependency>
 
     <dependency>
     	<groupId>javax.servlet</groupId>
@@ -177,7 +168,7 @@
     	<version>2.2.3</version>
     </dependency>
 
-	<!-- Database dependencies -->
+    <!-- Database dependencies -->
     <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
@@ -198,7 +189,8 @@
     	<artifactId>HikariCP</artifactId>
     	<version>2.6.1</version>
     </dependency>
-    
+
+
     <!-- Concerning Ehcache, as 2nd Level cache for Hibernate -->
     <dependency>
         <groupId>org.ehcache</groupId>
@@ -217,10 +209,10 @@
         <artifactId>slf4j-log4j12</artifactId>
         <version>1.7.25</version>
     </dependency>
-    
+
   </dependencies>
 
-  <developers>
+    <developers>
         <developer>
             <name>Michael Wakahe</name>
             <id>michael</id>
@@ -232,11 +224,11 @@
         </developer>
     </developers>
 
-  <contributors>
+    <contributors>
         <contributor>
             <name>Eugene Wang'ombe</name>
         </contributor>
-   </contributors>
+    </contributors>
 
 
   <build>
